Updated spring version: from 3.1.0 to 2.7.10